--- a/style.css
+++ b/style.css
@@ -1,42 +1,17 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     margin: 20px;
     color: #333;
 }
-
-h2 {
+h1 {
     text-align: left;
-    color: #333;
+    color: #000000;
     margin-bottom: 15px;
 }
 
-table {
-    width: 60%;
-    margin: 20px auto;
-    border-collapse: collapse;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-th, td {
-    border: 1px solid #ddd;
-    text-align: center;
-    padding: 10px;
-}
-
-th {
-    background-color: #4CAF50;
-    color: white;
-    font-size: 1.1em;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
 .flag {
-    width: 40px;
-    height: 25px;
-    margin: 0 5px;
+    max-width: 50px;  
+    max-height: 25x;  
+    object-fit: contain; 
 }
